@@ -75,10 +75,6 @@ Modifications needed for KF5 port
 - Q3PtrVector -> QVector< T * >
 - property editor; property editor item
     - Q3ListView -> QTableWidget
-- item selector
-    - Q3ListView -> QTreeWidget
-- project manager
-    - Q3ListView -> QTreeWidget
 - Q3ScrollView -> ?
 - Q3Hbox -> QWidget, QHBoxLayout
 - Q3PaintDeviceMetrics -> ?
