@@ -157,3 +157,7 @@ Changes between Qt3 and Qt4 port (to be completed)
 - do not depend ot KDE3 support libraries, only on KDE4 libraries; Qt3Support is still needed
 - fix crash on Redo in Pin Map Editor
 - fix UI files to not use Q3* functionality
+- ported item selector
+    - Q3ListView -> QTreeWidget
+- ported project manager
+    - Q3ListView -> QTreeWidget
